--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>LP News</title>
-		<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
-		<link rel="stylesheet" href="../public/css/styles.css" />
-		<link rel="stylesheet" href="../public/css/footer.css" />
-		<link rel="stylesheet" href="../public/css/navbar.css" />
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+		<link rel="stylesheet" href="./public/css/styles.css" />
+		<link rel="stylesheet" href="./public/css/footer.css" />
+		<link rel="stylesheet" href="./public/css/navbar.css" />
 	</head>
 
 	<body>
@@ -17,7 +17,7 @@
 				<input type="checkbox" id="nav-check" />
 				<div class="nav-header">
 					<div class="nav-title">
-						<img src="../public/img/LP-logo.png" alt="" />
+						<img src="./public/img/LP-logo.png" alt="" />
 					</div>
 				</div>
 				<div class="nav-btn">
@@ -85,7 +85,7 @@
 		<footer>
 			<div class="footer-main-div">
 				<div class="left-side-logo">
-					<img src="../public/img/LP-logo.png" alt="" />
+					<img src="./public/img/LP-logo.png" alt="" />
 				</div>
 				<div class="contact-info">
 					<a href="tel:8939444102">Call Us</a>
@@ -94,7 +94,7 @@
 				</div>
 			</div>
 		</footer>
-		<script src="../public/javascript/vanilla-tilt.js"></script>
-		<script src="../public/javascript/index.js"></script>
+		<script src="./public/javascript/vanilla-tilt.js"></script>
+		<script src="./public/javascript/index.js"></script>
 	</body>
 </html>
